@@ -4,6 +4,55 @@
 
 ## [Unreleased]
 
+### Added
+
+### Changed
+
+### Deprecated
+
+### Removed
+
+### Fixed
+
+### Security
+
+## [1.4.7] - 2026-02-27
+
+### Added
+
+- bundle `org.hotswapagent:hotswap-agent` into plugin sandbox/package via dedicated
+  distribution configuration and version-catalog managed dependency
+- add third-party notice for bundled HotSwapAgent (GPL-2.0) with source retrieval location
+
+### Changed
+
+- make HotSwap config resolution explicit via shared `resolveHotSwapConfig(...)` logic and
+  add dedicated resolution tests
+- refactor module layout: split `common` and `gradle` source sets into nested Gradle
+  subprojects with minimal dependencies
+- update Gradle init script classpath assembly to include both plugin and shared-common jars
+  after subproject split
+- make bundled HotSwapAgent path resolution a direct top-level lazy property lookup
+  (no service/resolver indirection)
+
+### Removed
+
+- remove obsolete HotSwapAgent download/warm-up text entries from localization bundles
+- remove now-unneeded agent resolver/test scaffolding after switching to required bundled artifact
+
+### Fixed
+
+- simplify HotSwapAgent resolution to packaged-jar lookup, removing runtime download path
+- tighten `HotswapRunConfigurationExtension` cleanup by tracking `UserDataHolder`s and clearing
+  state on dispose
+
+## [1.3.7] - 2026-02-24
+
+### Fixed
+
+- add Java-version-aware HotSwapAgent `--add-opens` JVM args for both RunConfiguration and Gradle
+  `JavaExec` [#143](https://github.com/ghostflyby/IntelliJ-Plugins/issues/143)
+
 ## [1.3.6] - 2025-11-22
 
 ### Fixed
@@ -75,22 +124,15 @@
 - Not editing parameters for non-debug starts
 - Wrong Gradle plugin class name
 
-[Unreleased]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.3.6...HEAD
-
-[1.3.6]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.3.5...v1.3.6
-
-[1.3.5]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.2.5...v1.3.5
-
-[1.2.5]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.2.4...v1.2.5
-
-[1.2.4]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.2.3...v1.2.4
-
-[1.2.3]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.2.2...v1.2.3
-
-[1.2.2]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.2.0...v1.2.2
-
-[1.2.0]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.1.0...v1.2.0
-
-[1.1.0]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/v1.0.0...v1.1.0
-
-[1.0.0]: https://github.com/ghostflyby/IntelliJ-Plugins/commits/v1.0.0
+[Unreleased]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.4.7...HEAD
+[1.4.7]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.3.7...EnhancedHotSwapEnabler-v1.4.7
+[1.3.7]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.3.6...EnhancedHotSwapEnabler-v1.3.7
+[1.3.6]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.3.5...EnhancedHotSwapEnabler-v1.3.6
+[1.3.5]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.2.5...EnhancedHotSwapEnabler-v1.3.5
+[1.2.5]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.2.4...EnhancedHotSwapEnabler-v1.2.5
+[1.2.4]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.2.3...EnhancedHotSwapEnabler-v1.2.4
+[1.2.3]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.2.2...EnhancedHotSwapEnabler-v1.2.3
+[1.2.2]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.2.0...EnhancedHotSwapEnabler-v1.2.2
+[1.2.0]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.1.0...EnhancedHotSwapEnabler-v1.2.0
+[1.1.0]: https://github.com/ghostflyby/IntelliJ-Plugins/compare/EnhancedHotSwapEnabler-v1.0.0...EnhancedHotSwapEnabler-v1.1.0
+[1.0.0]: https://github.com/ghostflyby/IntelliJ-Plugins/commits/EnhancedHotSwapEnabler-v1.0.0
